# ruri

./: .clang-format  .gitignore  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  News.md  README.md  SECURITY.md  TERMS_OF_USE.md  autogen.sh  build.c  build_tool  configure-bionic  configure.ac  package-lock.json  w
.github/workflows/: Ci.yml  build.yml  codeql.yml  test.yml
doc/: Build.md  FAQ.md  Integration.md  Security.md  USAGE.md  askllm.md  init.md  mount.md  rurienv.md
docs/: Security.md  USAGE.md  rurienv.md
src/: README.md  TOLLM.md  caplist.c  cgroup.c  chroot.c  config.c  cprintf.c  elf-magic.c  info.c  init.c  k2v.c  k2v3.c  mount.c  passwd.c  ps.c  rootless.c  ruri.c  rurienv.c  rurifetch.c  seccomp.c  signal.c  umount.c  unshare.c  watchdog.c
src/easteregg/: action.c  nekofeng.c
src/easteregg/include/: nekofeng.h
src/include/: compact.h  cprintf.h  hostarch.h  k2v.h  k2v3.h  ruri.h  version.h  version.h.in
srce/: seccomp.ce
test/: README.md  global.sh  init-root-test.sh  pid_memfd.c  test-root.c  test-root.sh  test_pid_file.c
test/root/: 10-pid-file.sh
