bin_PROGRAMS = ruri

# All .c files unconditionally participate in compilation;
# behavior is controlled internally in the C code via #ifdef DISABLE_*.
ruri_SOURCES = \
	src/caplist.c \
	src/cgroup.c \
	src/chroot.c \
	src/config.c \
	src/cprintf.c \
	src/elf-magic.c \
	src/info.c \
	src/init.c \
	src/k2v.c \
	src/main.c \
	src/mount.c \
	src/passwd.c \
	src/ps.c \
	src/rootless.c \
	src/ruri.c \
	src/rurienv.c \
	src/rurifetch.c \
	src/seccomp.c \
	src/signal.c \
	src/umount.c \
	src/unshare.c \
	src/easteregg/action.c \
	src/easteregg/layer.c \
	src/easteregg/nekofeng.c \
	src/easteregg/typewriter.c

AM_CPPFLAGS = \
    -I$(top_builddir)/src/include           \
    -I$(top_srcdir)/src/include             \
    -I$(top_srcdir)/src/easteregg/include

if !HAVE_LIBCAP
AM_CPPFLAGS += -DDISABLE_LIBCAP
endif
if !HAVE_LIBSECCOMP
AM_CPPFLAGS += -DDISABLE_LIBSECCOMP
endif
if !ENABLE_RURIENV
AM_CPPFLAGS += -DDISABLE_RURIENV
endif
if ENABLE_COREONLY
AM_CPPFLAGS += -DRURI_CORE_ONLY
endif
if ENABLE_DEBUG
AM_CPPFLAGS += -DRURI_DEBUG
endif
if !ENABLE_DEBUG
AM_CPPFLAGS += -D_FORTIFY_SOURCE=2
endif
if ENABLE_DEV
AM_CPPFLAGS += -DRURI_DEV
endif
if DISABLE_SYSTEMD
AM_CPPFLAGS += -DDISABLE_SYSTEMD
endif
AM_CPPFLAGS += $(COMMIT_CFLAGS)


ruri_CFLAGS = -std=gnu11 -D_FILE_OFFSET_BITS=64
if !ENABLE_DEBUG
ruri_CFLAGS += -Wno-unused-result
endif
ruri_CFLAGS += $(SECURITY_CFLAGS)

ruri_LDFLAGS =
if ENABLE_STATIC
ruri_LDFLAGS += -static
endif
ruri_LDFLAGS += $(SECURITY_LDFLAGS)

# link library
# pthread Hard dependency (easteregg/nekofeng.c is unconditionally used)
ruri_LDADD = $(LIBS)
if HAVE_LIBCAP
ruri_LDADD += $(CAP_LIBS)
endif
if HAVE_LIBSECCOMP
ruri_LDADD += $(SECCOMP_LIBS)
endif


# version.h is generated by AC_CONFIG_FILES from version.h.in,
# and is removed on distclean.
DISTCLEANFILES = src/include/version.h

distclean-local:
	@(sleep 1 && find $(top_builddir) -mindepth 1 -depth -type d -empty -exec rmdir {} \; 2>/dev/null) &


# Sync vendored sources from sibling repositories.
.PHONY: help upk2v upcprintf tidy format test
upk2v:
	@cp ../libk2v/src/k2v.c src/k2v.c
	@cp ../libk2v/src/include/k2v.h src/include/k2v.h
upcprintf:
	@cp ../cprintf/cprintf.c src/cprintf.c
	@cp ../cprintf/include/cprintf.h src/include/cprintf.h

lint_HDR = src/include/*.h src/easteregg/include/*.h
CHECKER_FLAGS = --checks=*,-clang-analyzer-security.insecureAPI.strcpy,-altera-unroll-loops,-cert-err33-c,-concurrency-mt-unsafe,-clang-analyzer-security.insecureAPI.DeprecatedOrUnsafeBufferHandling,-readability-function-cognitive-complexity,-cppcoreguidelines-avoid-magic-numbers,-readability-magic-numbers,-bugprone-easily-swappable-parameters,-cert-err34-c,-misc-include-cleaner,-readability-identifier-length,-bugprone-signal-handler,-cert-msc54-cpp,-cert-sig30-c,-altera-id-dependent-backward-branch,-bugprone-suspicious-realloc-usage,-hicpp-signed-bitwise,-clang-analyzer-security.insecureAPI.UncheckedReturn,-bugprone-reserved-identifier,-cert-dcl37-c,-cert-dcl51-cpp,-google-readability-function-size,-hicpp-function-size,-readability-function-size,-bugprone-reserved-identifier,-cert-dcl37-c,-cert-dcl51-cpp

tidy:
	@clang-tidy $(CHECKER_FLAGS) --list-checks $(ruri_SOURCES) -- $(AM_CPPFLAGS) $(ruri_CFLAGS)
	@clang-tidy $(CHECKER_FLAGS) $(ruri_SOURCES) -- $(AM_CPPFLAGS) $(ruri_CFLAGS)

format:
	@clang-format -i $(ruri_SOURCES) $(lint_HDR)
	@shfmt -i 4 -w test/*.sh
	@shfmt -i 4 -w test/root/*.sh
	@chmod 777 test/*.sh
	@chmod 777 test/root/*
	@clang-format -i test/*.c
	@sed -i "s/U '/U'/g" src/easteregg/*.c
	@sed -i "s/U \"/U\"/g" src/easteregg/*.c

test:
	@printf "\033[33mWarning: This test is under sudo, do not run it on your device.\033[0m\n"
	@printf "\033[33mYou have 20 seconds to press Ctrl+C to cancel.\033[0m\n"
	@sleep 20
	@cd test && $(CC) -o test-root test-root.c && sudo ./test-root

help:
	@printf "\033[1;38;2;254;228;208mUsage:\n"
	@echo "  make               compile"
	@echo "  make install       install to $(prefix)/bin"
	@echo "  make uninstall     uninstall ruri"
	@echo "  make clean         clean build artifacts"
	@echo "  make distclean     clean including configure artifacts"
	@echo "Only for developers:"
	@echo "  make tidy          run clang-tidy"
	@echo "  make format        format code"
	@printf "\033[0m"
